--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "node scripts/build.js && mv build/* .",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
