--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "short_name": "Carlos SIlva",
-  "name": "Site fodastico do Carlos",
+  "name": "Site Fodastico do Carlos",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "192x192",
+      "src": "favicon.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
