--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Site Fodastico do Carlos",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
