--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
+  "orientation": "portrait",
   "theme_color": "#A13939",
   "background_color": "#A13939"
 }
