--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
-    "babel-preset-react-app": "^3.0.3",
+    "babel-preset-react-app": "^3.1.0",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -27,16 +27,17 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "node-sass-chokidar": "0.0.3",
+    "normalize.css": "^7.0.0",
     "npm-run-all": "^4.1.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
-    "react": "^16.0.0",
-    "react-dev-utils": "^4.1.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.2.0",
+    "react-dev-utils": "^4.2.1",
+    "react-dom": "^16.2.0",
     "style-loader": "0.18.2",
-    "styled-components": "^2.2.1",
+    "styled-components": "^2.2.4",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
